# image_processor

image_processor/: CMakeLists.txt  bmp.cpp  bmp.h  filter_factory.cpp  filter_factory.h  filters.cpp  filters.h  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h  struct_filter.h  test.cpp
